<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Glasses</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="photo">照片</string>
    <string name="vedio">视频</string>
    <string name="setting">设置</string>
    <string name="unbind">解除绑定</string>
    <string name="about_glasses">关于眼镜</string>
    <string name="glasses">镜端</string>
    <string name="native_photo_fragment">本地</string>
    <string name="native_photo">本地照片</string>
    <string name="remote_photo">镜端照片</string>
    <string name="native_video">本地视频</string>
    <string name="remote_video">镜端视频</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="wifi_ap_hint">浏览手机内容需要开启wifi热点功能</string>
    <string name="live_wifi_ap_hint">直播需要开启wifi热点功能</string>
    <string name="turn_wifi_ap_on">现在开启</string>
    <string name="download_notification_title">Coldwave</string>
    <string name="title_activity_glasses_fragment">GlassesFragmentActivity</string>
    <string name="welcome">for Glass</string>
    <string name="welcome_text">Copyright © 2014 Ingenic.\n All rights reserved.</string>
    <string name="dialog_title">绑定眼镜需要开启蓝牙</string>
    <string name="dialog_ok">现在就去</string>
    <string name="dialog_cancle">退出应用</string>
    <string name="bluetooth_off">蓝牙没有开启，已退出眼睛助手应用</string>
    <string name="bind_timeout">绑定设备超时，请重新搜索设备</string>
    <string name="bond">绑定</string>
    <string name="reminder">小提示:</string>
    <string name="pair">配对</string>
    <string name="key_binding">搜索设备</string>
    <string name="bind_device">正在绑定...请稍后</string>
    <string name="bluetooth_pairing">"正在配对&#8230;"</string>
    <string name="bluetooth_preference_paired_devices">已配对设备</string>
    <string name="bluetooth_preference_devices">可用设备</string>
    <string name="pho_bind">摄像头绑定</string>
    <string name="pair_device">正在搜索...</string>
    <string name="pair_success">配对成功</string>
    <string name="pair_fail">配对失败</string>
    <string name="disconnect">绑定失败，点击重试</string>
    <string name="no_found_device">没有找到设备，点击重新扫描</string>
    <string name="timout_noti_title">IndroidSync Timeout</string>
    <string name="timout_noti_content">IndroidSync running without Bluetooth connectivity ability for a long time</string>
    <string name="retry_connect">reconnect&#8230;</string>
    <string name="retry_connect_success">reconnect success</string>
    <string name="retry_connect_failed">reconnect failed</string>
    <string name="retry_connect_failed_with_no_address">Lost remote device</string>
    <string name="bond_request">Bond Request</string>
    <string name="bond_request_message">Bond with %1$s?</string>
    <string name="remote_ring_title">remote ring</string>
    <string name="remote_ring_msg">command coming from ( %1$s ) .\nclick button below to stop.</string>
    <string name="ok">OK</string>
    <string name="default_switch">眼镜开关</string>
    <string name="default_switch_summary">开启/关闭眼镜功能</string>
    <string name="vedio_duration">分段录影</string>
    <string name="vedio_duration_summary">选择分段录影的时长</string>
    <string name="electric_anti_shake">电子防抖</string>
    <string name="anti_shake_summary">开启/关闭电子防抖功能</string>
    <string name="vedio_timestamp">时间标签</string>
    <string name="vedio_timestamp_summary">开启/关闭录像时间标签功能</string>
    <string name="media_pixel">视频分辨率</string>
    <string name="vedio_pixel_summary">选择录像的分辨率</string>
    <string name="photo_pixel_summary">选择拍照的分别率</string>
    <string name="bluetooth_error">蓝牙连接异常,请重试</string>
    <string name="select_all">全选</string>
    <string name="volume">音量</string>
    <string name="volume_summary">眼镜音量控制</string>
    <string name="other">其他</string>
    <string name="glass_ssid">眼镜热点SSID</string>
    <string name="glass_ssid_summary">设置眼镜热点的ssid</string>
    <string name="glass_ap_pw">眼镜热点密码</string>
    <string name="glass_appw_summary">设置眼镜热点的密码</string>
    <string name="wifi_ap">Wifi热点</string>
    <string name="wifi_ap_summary">设置Wifi热点信息</string>
    <string name="wifi_ap_setting">Wifi热点设置</string>
    <string name="empty_ssid">请输入热点的SSID</string>
    <string name="pw_too_short">热点密码不能少于8位</string>
    <string name="waiting_for_glass_connect">waiting for device connect#8230;#8230;#8230;</string>
    <string name="video_live">直播</string>
    <!-- quick sms -->
    <string name="respond_via_sms_custom_message">"custom message"</string>
    <string name="respond_via_sms_confirmation_format">"sms was send."</string>
    <string name="respond_via_sms_canned_response_1">"Cann't talk now. What's up?"</string>
    <string name="respond_via_sms_canned_response_2">"I'll Call you right back"</string>
    <string name="respond_via_sms_canned_response_3">"I'll Call you later"</string>
    <string name="respond_via_sms_canned_response_4">"Can't talk now. Call me later?"</string>
    <string name="respond_via_sms_setting_title_2">"Edit quick responses"</string>
    <string name="respond_via_sms_edittext_dialog_title">"Quick responses"</string>
    <string name="sync_via_sms">"sync to watch"</string>
    <string name="sync_via_sms_content">sync the quick sms to watch"</string>
    <string name="title_activity_setting_fragment">SettingFragment</string>
    <string name="title_activity_vedio_player">VedioPlayerActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>
